# tagless-final-interpreter-lecture

./: README.md  lesson-project.cabal
app/: Main.hs
src/: Eval.hs  Exp2.hs  FlatF.hs  Flatl.hs  Lib.hs  PrettyPrinter.hs  PushNegF.hs  PushNegFI.hs  PushNegl.hs  TTFdB.hs  TTIF.hs  Typ.hs
src/Exp/: Mul.hs  Sum.hs
src/Sem/: Eval.hs  MulTree.hs  PrettyPrinter.hs  Tree.hs
