name:                lesson-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/manuelleduc/lesson-project#readme
license:             BSD3
license-file:        LICENSE
author:              Manuel Leduc
maintainer:          manuel.leduc@gmail.com
copyright:           CC-by
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Exp.Sum, Exp.Mul, Sem.PrettyPrinter, Sem.Eval, Sem.Tree, Sem.MulTree
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable lesson-project-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lesson-project
  default-language:    Haskell2010

test-suite lesson-project-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , lesson-project
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/manuelleduc/lesson-project
